# EcoDrive

./: .gitignore  CMakeLists.txt  Doxyfile  PLATFORM_DOCUMENTATION.md  README.md  debugStart.sh  ecodrive_sim.csv  imgui.ini  inverter_test.csv  repomix.zip.xml  setup.sh  simulation_results.csv  system_results.csv  system_results_spwm.csv
.continue/: config.json  repomix-output-EcoDrive.xml  repomix.zip.xml
.continue/prompts/: context.md  system.md
.continue/rules/: eco-drive-rule.md
EcoDrive/: CMakeLists.txt  DAQSessionAPP.h  main.cpp  sys.cpp  sys.h
EcoDrive/PmsmControl/: PmsmControl.cpp  PmsmControl.h  PmsmControlConf.h  PmsmControlCore.cpp  PmsmControlCore.h  PmsmControlCore_Foc.cpp  PmsmControlCore_Foc.h  PmsmControlCore_SComm.cpp  PmsmControlTypes.h  PosDriver.cpp  PosDriver.h
EcoDrive/platform/host/: CMakeLists.txt  TCPServer.cpp  el_hall.cpp  el_hall.h  el_mc3p.cpp  el_mc3p.h  platform.cpp  sil.h
EcoDrive/platform/stm32f4/: CMakeLists.txt  platform.c  platform.cmake  platform.h
EcoTool/: CMakeLists.txt  DAQSessionAPP.h  EcoTool.cpp  RingBuffer.hpp  Serial.hpp  TcpClient.hpp  Usbxch.cpp  Usbxch.h  Usbxch.hpp
application/: DAQSessionAPP.h  PmsmControl.cpp  PmsmControl.h  PmsmControlCore.cpp  PmsmControlCore.h  PmsmControlCore_Foc.cpp  PmsmControlCore_SComm.cpp  PmsmControlCore_SComm.h  PmsmControlCore_Trap.cpp  PmsmControlCore_Trap.h  PmsmControlMode_SComm.cpp  PmsmControl_Conf.h  PmsmControl_Foc.cpp  PmsmControl_Foc.h  PmsmControl_SComm.cpp  PmsmControl_SComm.h  PmsmControl_Trap.cpp  PmsmControl_Trap.h  PmsmController.cpp  PmsmController.h  PmsmMode_ClosedTrap.cpp  PmsmMode_Commission.cpp  PmsmMode_Idle.cpp  PmsmMode_OpenFocIF.cpp  PmsmMode_OpenTrap.cpp  PmsmMode_OpenVF.cpp  PmsmMode_SComm.cpp  PmsmMode_StupTrap.cpp  PmsmTrapStartup.h  elmotor_pmsm.c  elmotor_pmsm.h  main.cpp  sensor.cpp  sensor.h  sys.cpp  sys.h
application/BldcControl/: PmsmControlCore_Trap.cpp  PmsmControlCore_Trap.h
application/PmsmControl/: PmsmControl.cpp  PmsmControl.h  PmsmControlConf.h  PmsmControlCore.cpp  PmsmControlCore.h  PmsmControlCore_Foc.cpp  PmsmControlCore_Foc.h  PmsmControlCore_SComm.cpp  PmsmControlCore_SComm.h  PmsmControlCore_Trap.cpp  PmsmControlCore_Trap.h  PmsmControlTypes.h  PosDriver.h
build_arm/: EcoDrive.elf  EcoDrive.hex  EcoDrive.map  compile_commands.json
build_host/: compile_commands.json
core/: ElcoreScopeStream.hpp  elcore.h  elcore_cfifo.h  elcore_rstream.h  elcore_smem.h  elmath.h
docs/: PLATFORM__DOCUMENTATION_8md.html  README_8md.html  a00005_source.html  a00008_source.html  a00011_source.html  a00014_source.html  a00017_source.html  a00020_source.html  a00023_source.html  a00026_source.html  a00029_source.html  a00032_source.html  a00035_source.html  a00038_source.html  a00041_source.html  a00044_source.html  a00047_source.html  a00050_source.html  a00053_source.html  a00056_source.html  a00059_source.html  a00062_source.html  a00065_source.html  a00068_source.html  a00071_source.html  a00074_source.html  a00077_source.html  a00080_source.html  a00083_source.html  a00086_source.html  a00092_source.html  a00098_source.html  a00101_source.html  a00104_source.html  a00107_source.html  a00110_source.html  a00113_source.html  a00116_source.html  a00119_source.html  a00122_source.html  (+2610 more)
docs/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_1b.js  all_1c.js  all_1d.js  all_1e.js  all_1f.js  all_2.js  all_20.js  all_21.js  all_22.js  all_23.js  all_24.js  all_25.js  all_26.js  all_27.js  all_28.js  all_2a.js  all_2b.js  all_2c.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  (+123 more)
ecolib/el/: core.h  el_ring.h  math.h  mempool.h  ring.h
ecolib/math/: lut.h  math.h
ecolib/middleware/: ABFStream.cpp  ABFStream.h  DAQCodec.h  DAQStream.cpp  DAQStream.h  IDV.h  ScopeStream.h
eldriver/host/: eldriver_conf.h  eldriver_core.c  eldriver_core.h  eldriver_hall.cpp  eldriver_hall.h  eldriver_mc3p.cpp  eldriver_mc3p.h  eldriver_uart.c  eldriver_uart.h  eldriver_usbcdc.c  eldriver_usbcdc.h  eldriver_usbxch.cpp  eldriver_usbxch.h
eldriver/stm32f4/: eldriver_conf.h  eldriver_core.c  eldriver_mc3p.h  eldriver_mc3p_it.c  eldriver_uart.c  eldriver_usbcdc.c  eldriver_usbcdc.h  eldriver_usbxch.c  eldriver_usbxch.h
middleware/: ABFStream.cpp  ABFStream.h  Codec.h  DAQStream.cpp  DAQStream.h  IDV.h  IDV_schema.h  ScopeStream.h  aebfStream.h
platform/host/: CMakeLists.txt  TCPServer.cpp  TCPServer.h  electrical_solver_gen.py  imgui.ini  inverter_model.h  platform.cpp  platform.h  pmsm_model.h  sil.h  silgui.h  sim_gui.cpp  virtual_pmsm.cpp  virtual_pmsm.h  virtual_pmsm_gui.cpp  virtual_pmsm_gui.h
platform/stm32f1/: CMakeLists.txt  DSP  Drivers  FreeRTOSConfig.h  Middlewares  STM32F103XB_FLASH.ld  platform.c  platform.h  startup_stm32f103xb.s  stm32f1xx_hal_conf.h  stm32f1xx_it.h  syscalls.c  sysmem.c  system_stm32f1xx.c
platform/stm32f1/cmake/: gcc-arm-none-eabi.cmake
platform/stm32f1/eldriver/: eldriver_conf.h  eldriver_core.c  eldriver_core.h  eldriver_hall.c  eldriver_hall.h  eldriver_mc3p.c  eldriver_mc3p.h  eldriver_mc3p_it.c  eldriver_uart.c  eldriver_uart.h  eldriver_usbcdc.c  eldriver_usbcdc.h
platform/stm32f4/: CMakeLists.txt  FreeRTOSConfig.h  stm32f4xx_it.c  tusb_config.h  usb_desc.c
platform/stm32f4/USB_DEVICE/: usbd_cdc_if.h
platform/stm32f4/cmake/: gcc-arm-none-eabi.cmake
platform/stm32f4/eldriver/: eldriver_conf.h  eldriver_core.h  eldriver_hall.c  eldriver_hall.h  eldriver_mc3p.c  eldriver_mc3p.h  eldriver_mc3p_it.c  eldriver_uart.h  eldriver_usbcdc.h  eldriver_usbxch.c  eldriver_usbxch.h
test/: CMakeLists.txt  common.h  dummy_test.cpp  imgui.ini  test_abf.cpp  test_electricalSim.cpp  test_inverter.cpp  test_pmsm.cpp  test_pmsm2.cpp  test_scopeStream.cpp  test_sil.cpp
test/middleware/: test_ABFStream.cpp  test_Codec.cpp
tools/: sim_model.py
tools/PY_EcoTool/: EcoDrive.code-workspace  EcoDrive.py  EcoTool.py  aebf_text.py  comm.py  core.py  requirements.txt  setup.py  usbBenchmark.py
(+290 files in other folders)
